# truffle-sdk-frontend

./: .gitignore  README.md  REFACTOR-VERIFY.md  TO-DO.md  pyproject.toml
scripts/: build.sh  lint.sh  test.sh
